Projet GL/test/src/test/deca/syntax/invalid/object.deca
// Test class Object

// Historique : cree le 21/01/2023

class Object{}